--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>Story Behind the Chemical Elements</title>
+    <title>Stories Behind the Chemical Elements</title>
     <script type='text/javascript' src='./dist/bundle.js'></script>
     <link rel='stylesheet' href='./stylesheets/application.css' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
