--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,12 @@
     <title>Stories Behind the Chemical Elements</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhF8ziwdFg0x5PHs8m7o-_ZqXQjP9VQ-w">
+    </script>
   </head>
   <body>
     <div id='root'></div>
   </body>
 </html>
+
